; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_io-util.c_set_iovec_string_field_free.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_io-util.c_set_iovec_string_field_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iovec = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @set_iovec_string_field_free(%struct.iovec* %0, i64* %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.iovec*, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store %struct.iovec* %0, %struct.iovec** %5, align 8
  store i64* %1, i64** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load %struct.iovec*, %struct.iovec** %5, align 8
  %11 = load i64*, i64** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i8* @set_iovec_string_field(%struct.iovec* %10, i64* %11, i8* %12, i8* %13)
  store i8* %14, i8** %9, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = call i32 @free(i8* %15)
  %17 = load i8*, i8** %9, align 8
  ret i8* %17
}

declare dso_local i8* @set_iovec_string_field(%struct.iovec*, i64*, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
